Correção em quebra de layout em telas maiores

--- a/app/styles/editor/editor-status.css
+++ b/app/styles/editor/editor-status.css
@@ -5,12 +5,12 @@
 }
 
 .status__panel--banner {
-  gap: .5rem;
+  gap: 8px;
 }
 
 .status__img {
   order: 1;
-  max-width: 25rem;
+  max-width: 400px;
 }
 
 .status__caption {
@@ -18,7 +18,7 @@
 }
 
 .status__panel {
-  gap: 1rem;
+  gap: 16px;
 }
 
 .status__caption,
@@ -27,7 +27,7 @@
 }
 
 .status__panel--link {
-  font-size: 1.125rem;
+  font-size: 1.15rem;
   font-weight: bold;
 }
 
@@ -37,10 +37,10 @@
 
 @media screen and (min-width: 512px) {
   .status__panel {
-    gap: 1.25rem;
+    gap: 20px;
   }
 
   .status__panel--banner {
-    gap: 1rem;
+    gap: 16px;
   }
 }
