--- a/app/styles/login/login.css
+++ b/app/styles/login/login.css
@@ -1,5 +1,5 @@
 .login {
-  padding: var(--margin-sm);
+  padding: 16px;
   padding-block: 4.75rem;
   background: linear-gradient(
         to right,
@@ -61,8 +61,8 @@
 .login__label {
   grid-area: label;
   background-color: var(--c-carbon--ls);
-  border-top-left-radius: 0.25rem;
-  border-bottom-left-radius: 0.25rem;
+  border-top-left-radius: 4px;
+  border-bottom-left-radius: 4px;
   justify-content: space-between;
 }
 
@@ -75,13 +75,13 @@
   grid-area: input;
   background-color: var(--c-gray);
   color: var(--c-black--ds);
-  border-top-right-radius: 0.25rem;
-  border-bottom-right-radius: 0.25rem;
+  border-top-right-radius: 4px;
+  border-bottom-right-radius: 4px;
 }
 
 .login__warn {
   grid-area: warn;
-  margin-top: 0.25rem;
+  margin-top: 4px;
   min-height: 1ch;
 }
 
@@ -91,26 +91,26 @@
 }
 
 .login__button {
-  padding: 1rem 1.5rem;
+  padding: 16px 24px;
   background-color: var(--c-red--l);
   color: var(--c-white--ls);
-  max-width: 7.8125rem;
-  border-radius: 0.25rem;
+  max-width: 125px;
+  border-radius: 4px;
 }
 
 @media screen and (min-width: 768px) {
   .login {
-    padding: var(--margin-md);
+    padding: 32px;
   }
 }
 
 @media screen and (min-width: 1140px) {
   .login {
-    padding: var(--margin-lg);
+    padding: 64px;
   }
 
   .login__fieldset,
   .login__button {
-    max-width: 26.4375rem;
+    max-width: 420px;
   }
 }
