--- a/app/styles/main/main-context.css
+++ b/app/styles/main/main-context.css
@@ -11,11 +11,11 @@
 
 [class*="context__main"] .main__hero,
 .main__nav {
-  padding: 1.5rem;
+  padding: 24px;
 }
 
 [class*="context__main"] .main__hero {
-  padding-top: 4rem;
+  padding-top: 64px;
 }
 
 .context__main--products .main__hero {
@@ -44,11 +44,11 @@
   display: flex;
   flex-flow: column nowrap;
   color: var(--c-white);
-  gap: 0.5rem;
+  gap: 8px;
 }
 
 .hero__title {
-  font-size: 2rem;
+  font-size: 32px;
 }
 
 .hero__desc,
@@ -63,13 +63,13 @@
 
 .hero__btn {
   background-image: linear-gradient(to bottom, var(--c-red), var(--c-black--ls));
-  max-width: 10rem;
-  padding: 0.75rem 1rem;
-  border-radius: 2rem;
+  max-width: 160px;
+  padding: 12px 16px;
+  border-radius: 32px;
 }
 
 .main__nav--title {
-  margin-bottom: 3rem;
+  margin-bottom: 48px;
 }
 
 .main__nav--links,
@@ -79,12 +79,12 @@
 
 .main__nav--links {
   grid-template-columns: repeat(auto-fit, minmax(min(150px, 100%), 1fr));
-  gap: 1rem;
+  gap: 16px;
   list-style: none;
 }
 
 .main__nav--item {
-  border-radius: .5rem;
+  border-radius: 8px;
   overflow: hidden;
   flex: 1;
 }
@@ -92,7 +92,7 @@
 .nav__link--figure {
   isolation: isolate;
   position: relative;
-  min-height: 5rem;
+  min-height: 80px;
 }
 
 .nav__link--figure img,
@@ -146,8 +146,8 @@
   border-radius: 50%;
   background-color: var(--c-red);
   position: fixed;
-  bottom: .5rem;
-  right: .5rem;
+  bottom: 8px;
+  right: 8px;
 }
 
 .main__nav--scrollup .fa-solid {
@@ -155,13 +155,12 @@
 }
 
 .main__content {
-  padding-block: 2rem;
+  padding-block: 32px;
 }
 
 @media screen and (min-width: 768px) {
   [class*="context__main"] .main__hero {
-    padding: 2.5rem;
-    padding-top: 4rem;
+    padding: 64px 40px 40px;
   }
 
   .hero__title {
@@ -173,21 +172,21 @@
   }
 
   .main__nav {
-    padding: 2rem 2.5rem;
+    padding: 32px 40px;
   }
 
   .nav__link--figure {
-    min-height: 15rem;
+    min-height: 240px;
   }
 
   .main__content {
-    padding-block: 3rem;
+    padding-block: 48px;
   }
 }
 
 @media screen and (min-width: 1140px) {
   [class*="context__main"] .main__hero {
-    padding: 6rem 4.5rem 4.5rem;
+    padding: 96px 72px 72px;
   }
 
   .hero__title {
@@ -196,16 +195,15 @@
 
   .hero__title,
   .hero__desc {
-    max-width: calc((100vw - 9rem) / 2);
+    max-width: calc((100vw - 144px) / 2);
   }
 
   .main__nav {
-    padding: 3rem 4.5rem;
+    padding: 48px 72px;
   }
 
 
   .nav__link--figure {
-    min-height: 20rem;
+    min-height: 320px;
   }
-
 }
