--- a/app/styles/main/main-header.css
+++ b/app/styles/main/main-header.css
@@ -1,6 +1,6 @@
 .context__header,
 .header__search {
-  gap: 0.5rem;
+  gap: 8px;
   background-color: var(--c-black);
   display: flex;
 }
@@ -22,7 +22,7 @@
   justify-content: space-between;
   height: fit-content;
   font-size: smaller;
-  max-width: calc(100vw - 3rem);
+  max-width: calc(100vw - 48px);
 }
 
 .header__search,
@@ -32,7 +32,7 @@
 
 .header__search,
 .header__login {
-  border-radius: .5rem;
+  border-radius: 8px;
 }
 
 .header__search:focus-within {
@@ -45,7 +45,7 @@
 
 .header__search--input,
 .header__search--button {
-  padding: .25rem .5rem;
+  padding: 4px 8px;
 }
 
 .header__search--button {
@@ -59,8 +59,8 @@
 
 .header__login {
   font-weight: 600;
-  border: 0.125rem solid var(--c-red--ls);
-  padding: 0.75rem 1.25rem;
+  border: 2px solid var(--c-red--ls);
+  padding: 12px 20px;
   text-align: center;
 }
 
@@ -80,9 +80,9 @@
 @media screen and (min-width: 512px) {
   .header__search {
     background-color: var(--c-white);
-    max-width: 10rem;
+    max-width: 160px;
   }
-  
+
   .header__search,
   .header__search--input {
     width: 100%;
@@ -91,20 +91,20 @@
 
 @media screen and (min-width: 768px) {
   .header__logo {
-    min-width: 8rem;
+    min-width: 128px;
   }
 
   .header__search {
-    max-width: 15rem;
+    max-width: 240px;
   }
 
   .header__login {
-    padding: 1rem 1.5rem;
+    padding: 16px 24px;
   }
 }
 
 @media screen and (min-width: 1140px) {
   .header__search {
-    max-width: 20rem;
+    max-width: 320px;
   }
 }
