--- a/app/styles/main/main-context.css
+++ b/app/styles/main/main-context.css
@@ -1,9 +1,5 @@
 .context__main--index .main__hero {
-  background: linear-gradient(
-        to bottom,
-        rgba(0, 0, 0, 0.7),
-        rgba(0, 0, 0, 0.7)
-      )
+  background: linear-gradient(to bottom, rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7))
       100%,
     url("../../assets/images/geeky-shots-hQ4BQ3wdHsQ-unsplash.jpg") no-repeat
       center / cover;
@@ -19,24 +15,23 @@
 }
 
 .context__main--products .main__hero {
-  background: linear-gradient(
-        to bottom,
-        rgba(0, 0, 0, 0.7),
-        rgba(0, 0, 0, 0.7)
-      )
+  background: linear-gradient(to bottom, rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7))
       100%,
     url("../../assets/images/erik-mclean-8SeJUmfahu0-unsplash.jpg") no-repeat
       center / cover;
 }
 
 .context__main--search .main__hero {
-  background: linear-gradient(
-        to bottom,
-        rgba(0, 0, 0, 0.7),
-        rgba(0, 0, 0, 0.7)
-      )
+  background: linear-gradient(to bottom, rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7))
       100%,
     url("../../assets/images/camila-fernandez-fYm4-WeD_fg-unsplash.jpg")
+      no-repeat center / cover;
+}
+
+.context__main--editor .main__hero {
+  background: linear-gradient(to bottom, rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7))
+      100%,
+    url("../../assets/images/ben-neale-zpxKdH_xNSI-unsplash.jpg")
       no-repeat center / cover;
 }
 
@@ -62,7 +57,11 @@
 }
 
 .hero__btn {
-  background-image: linear-gradient(to bottom, var(--c-red), var(--c-black--ls));
+  background-image: linear-gradient(
+    to bottom,
+    var(--c-red),
+    var(--c-black--ls)
+  );
   max-width: 160px;
   padding: 12px 16px;
   border-radius: 32px;
@@ -78,7 +77,7 @@
 }
 
 .main__nav--links {
-  grid-template-columns: repeat(auto-fit, minmax(min(150px, 100%), 1fr));
+  grid-template-rows: repeat(4, 1fr);
   gap: 16px;
   list-style: none;
 }
@@ -86,17 +85,16 @@
 .main__nav--item {
   border-radius: 8px;
   overflow: hidden;
-  flex: 1;
 }
 
 .nav__link--figure {
   isolation: isolate;
   position: relative;
-  min-height: 80px;
+  min-height: 100px;
 }
 
 .nav__link--figure img,
-.nav__link--figure figcaption, 
+.nav__link--figure figcaption,
 .nav__link--figure::after {
   position: absolute;
 }
@@ -134,7 +132,11 @@
 
 .nav__link--figure::after {
   content: "";
-  background-image: linear-gradient(to bottom, rgba(0,0,0,0.3), rgba(0,0,0,0.9));
+  background-image: linear-gradient(
+    to bottom,
+    rgba(0, 0, 0, 0.3),
+    rgba(0, 0, 0, 0.9)
+  );
   z-index: 2;
   pointer-events: none;
 }
@@ -175,8 +177,13 @@
     padding: 32px 40px;
   }
 
+  .main__nav--links {
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(2, 1fr);
+  }
+
   .nav__link--figure {
-    min-height: 240px;
+    min-height: 200px;
   }
 
   .main__content {
@@ -202,6 +209,10 @@
     padding: 48px 72px;
   }
 
+  .main__nav--links {
+    grid-template-columns: repeat(auto-fit, minmax(min(150px, 100%), 1fr));
+    grid-template-rows: 1fr;
+  }
 
   .nav__link--figure {
     min-height: 320px;
