--- a/app/styles/editor/editor-status.css
+++ b/app/styles/editor/editor-status.css
@@ -4,13 +4,17 @@
   flex-direction: column;
 }
 
+.status__panel {
+  padding: 24px;
+}
+
 .status__panel--banner {
   gap: 8px;
+  align-items: center;
 }
 
 .status__img {
   order: 1;
-  max-width: 400px;
 }
 
 .status__caption {
@@ -42,5 +46,21 @@
 
   .status__panel--banner {
     gap: 16px;
+  }
+
+  .status__img {
+    max-width: 400px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .status__panel {
+    padding: 40px;
+  } 
+}
+
+@media screen and (min-width: 1140px) {
+  .status__panel {
+    padding: 72px;
   }
 }
