--- a/app/styles/main/main-context.css
+++ b/app/styles/main/main-context.css
@@ -31,8 +31,8 @@
 .context__main--editor .main__hero {
   background: linear-gradient(to bottom, rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7))
       100%,
-    url("../../assets/images/ben-neale-zpxKdH_xNSI-unsplash.jpg")
-      no-repeat center / cover;
+    url("../../assets/images/ben-neale-zpxKdH_xNSI-unsplash.jpg") no-repeat
+      center / cover;
 }
 
 .main__hero {
@@ -65,6 +65,14 @@
   max-width: 160px;
   padding: 12px 16px;
   border-radius: 32px;
+}
+
+.hero__btn:hover {
+  background-image: linear-gradient(
+    to bottom,
+    var(--c-red--d),
+    var(--c-black--l)
+  );
 }
 
 .main__nav--title {
@@ -110,6 +118,15 @@
   z-index: 1;
 }
 
+.main__nav--link:active figcaption {
+  color: var(--c-red--ls);
+}
+
+.main__nav--link:hover img,
+.main__nav--link:focus img {
+  transform: scale(1.3) rotate(-10deg);
+}
+
 .nav__link--figure,
 .main__nav--scrollup {
   text-align: center;
@@ -135,10 +152,17 @@
   background-image: linear-gradient(
     to bottom,
     rgba(0, 0, 0, 0.3),
+    rgba(0, 0, 0, 0.5),
     rgba(0, 0, 0, 0.9)
   );
   z-index: 2;
   pointer-events: none;
+}
+
+.main__nav--link:hover .nav__link--figure::after,
+.main__nav--link:focus .nav__link--figure::after {
+  background-image: none;
+  background-color: rgba(0, 0, 0, 0.7);
 }
 
 .main__nav--scrollup {
