--- a/app/styles/main/main-header.css
+++ b/app/styles/main/main-header.css
@@ -58,12 +58,12 @@
 }
 
 :where(.header__search:focus-within) .header__search--button {
-  background-color: var(--c-red);
+  background-color: var(--c-red--d);
   color: var(--c-white);
 }
 
 .header__search--button:active {
-  background-color: var(--c-red--d);
+  background-color: var(--c-red);
 }
 
 .header__login {
@@ -128,4 +128,14 @@
   .header__search {
     max-width: 320px;
   }
+}
+
+@media (prefers-reduced-motion: no-preference) {
+  .header__search--button {
+    transition: .1s all ease;
+  }
+
+  .header__login {
+    transition: all .1s cubic-bezier(.25,.46,.45,.94);
+  } 
 }
