--- a/app/styles/editor/editor.css
+++ b/app/styles/editor/editor.css
@@ -14,6 +14,11 @@
   align-items: center;
 }
 
+.editor__menu,
+.editor__content {
+  max-width: 100vw;
+}
+
 .context__main--editor .main__nav {
   grid-area: nav;
 }
@@ -71,7 +76,10 @@
   padding-left: 24px;
 }
 
-.editor__menu,
+.editor__menu {
+  padding: 72px 24px;
+}
+
 .editor__form {
   padding: 24px;
 }
@@ -275,7 +283,7 @@
   }
 
   .editor__menu {
-    padding: 40px;
+    padding: 80px 40px;
   }
 
   .menu__options {
@@ -324,7 +332,7 @@
   }
 
   .editor__menu {
-    padding: 72px;
+    padding: 120px 72px;
   }
 
   .editor__form {
